--- a/app/src/main/res/layout/item_task_open.xml
+++ b/app/src/main/res/layout/item_task_open.xml
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
-            android:text="@string/btnAssign"
+            android:text="@string/btnAssignTask"
             android:textSize="11sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTaskDescription" />
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
-            android:text="@string/btnReject"
+            android:text="@string/btnRejectTask"
             android:textSize="11sp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
-            android:text="@string/btnClose"
+            android:text="@string/btnFinishTask"
             android:textSize="11sp"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/btnReject"
