--- a/app/src/main/res/layout/item_task_open.xml
+++ b/app/src/main/res/layout/item_task_open.xml
@@ -13,14 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="12dp">
+        android:padding="@dimen/spacing_cards">
 
         <TextView
             android:id="@+id/tvTaskName"
             style="@style/Widget.PushAlerts.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="My Urgent Task" />
@@ -115,7 +114,6 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
             android:text="@string/btnFinishTask"
             android:textSize="11sp"
             android:visibility="gone"
