--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/LoginFragment">
+    app:startDestination="@id/MainFragment">
 
     <fragment
         android:id="@+id/MainFragment"
@@ -27,13 +27,4 @@
         android:name="ch.wenksi.pushalerts.ui.AboutFragment"
         android:label="About"
         tools:layout="@layout/fragment_about" />
-    <fragment
-        android:id="@+id/LoginFragment"
-        android:name="ch.wenksi.pushalerts.ui.LoginFragment"
-        android:label="Login"
-        tools:layout="@layout/fragment_login" >
-        <action
-            android:id="@+id/action_LoginFragment_to_MainFragment"
-            app:destination="@id/MainFragment" />
-    </fragment>
 </navigation>
