--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingVertical="100dp"
     android:paddingHorizontal="50dp"
+    android:paddingVertical="100dp"
     tools:context=".ui.LoginFragment">
 
     <ImageView
@@ -20,46 +20,50 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmailAddress"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email Address"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/ivCompanyLogo"
+        android:hint="@string/tilEmailHint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        app:layout_constraintTop_toBottomOf="@id/ivCompanyLogo">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tiedEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilPassword"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tilEmailAddress"
+        android:hint="@string/tilPasswordHint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        app:layout_constraintTop_toBottomOf="@id/tilEmailAddress">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tiedPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="login"
+        android:text="@string/btnLogin"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
