--- a/app/src/main/res/layout/item_task_open.xml
+++ b/app/src/main/res/layout/item_task_open.xml
@@ -29,6 +29,7 @@
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/ivTaskSourceIcon"
             android:src="@drawable/ic_outline_notifications_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTaskName" />
@@ -49,10 +50,10 @@
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/ivDescriptionIcon"
             android:src="@drawable/ic_outline_description_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivTaskSourceIcon" />
-
 
         <TextView
             android:id="@+id/tvTaskDescription"
@@ -71,8 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/ivDescriptionIcon"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivDescriptionIcon"
             tools:text="01.04.21 - 20:34" />
 
         <TextView
