--- a/app/src/main/res/layout/fragment_tab_open.xml
+++ b/app/src/main/res/layout/fragment_tab_open.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:checkable="true"
             android:checked="false"
-            android:text="Mine"
+            android:text="@string/chipFilterMine"
             app:chipCornerRadius="8dp" />
 
         <com.google.android.material.chip.Chip
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:checkable="true"
             android:checked="false"
-            android:text="Unassigned"
+            android:text="@string/chipFilterUnassigned"
             app:chipCornerRadius="8dp" />
     </com.google.android.material.chip.ChipGroup>
 
