--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:textColor="@color/textSecondary"
-        android:text="Push Alerts"
+        android:text="@string/title"
         android:textAppearance="@style/Widget.PushAlerts.Headline1" />
 
     <View
