--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/MainFragment">
-
     <fragment
         android:id="@+id/MainFragment"
         android:name="ch.wenksi.pushalerts.ui.MainFragment"
@@ -26,6 +25,8 @@
         android:id="@+id/AboutFragment"
         android:name="ch.wenksi.pushalerts.ui.AboutFragment"
         android:label="About"
-        app:popUpToInclusive="true"
         tools:layout="@layout/fragment_about" />
+    <action
+        android:id="@+id/action_Global_to_MainFragment"
+        app:destination="@id/MainFragment" />
 </navigation>
