--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -43,6 +44,16 @@
             android:text="@string/tvAuthor"
             app:layout_constraintStart_toEndOf="@id/tvAuthorLabel"
             app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+        <TextView
+            android:id="@+id/tvEmail"
+            style="@style/Widget.PushAlerts.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/tvEmail"
+            app:layout_constraintStart_toEndOf="@id/tvAuthorLabel"
+            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
 
         <TextView
             android:id="@+id/tvDescription"
@@ -50,10 +61,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/tvDescription"
+            tools:text="Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAuthorLabel" />
+            app:layout_constraintTop_toBottomOf="@id/tvEmail" />
 
         <TextView
             android:id="@+id/tvLicenseLabel"
